apps/mattermost/base/mattermost-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    cert-manager.io/cluster-issuer: iaas-wcooke-me
    forecastle.stakater.com/appName: Mattermost
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: Apps
    forecastle.stakater.com/icon: https://mattermost.apps.iaas.wcooke.me/static/images/favicon/favicon-default-64x64.png
    forecastle.stakater.com/network-restricted: "true"
    # ingress.cilium.io/tls-passthrough: enabled
    # nginx.ingress.kubernetes.io/proxy-body-size: 1000M
  name: mattermost-ingress
spec:
  ingressClassName: cilium
  rules:
  - host: mattermost.apps.iaas.wcooke.me
    http:
      paths:
      - backend:
          service:
            name: mattermost
            port:
              number: 8065
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - mattermost.apps.iaas.wcooke.me
    secretName: mattermost-ingress-certs
